fix(header): prevent layout jump by setting fixed height for nav child on search open

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,6 +30,7 @@ nav {
     display: flex;
     gap: 25px;
     align-items: center;
+    height: 33px;
   }
 
   h2 {
